WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46433
Delay construction of functions that aren't captured
https://bugs.webkit.org/show_bug.cgi?id=46433
Summary
Delay construction of functions that aren't captured
Oliver Hunt
Reported
2010-09-23 17:07:39 PDT
Delay construction of functions that aren't captured
Attachments
Patch
(20.86 KB, patch)
2010-09-23 17:11 PDT
,
Oliver Hunt
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-09-23 17:11:39 PDT
Created
attachment 68626
[details]
Patch
Geoffrey Garen
Comment 2
2010-09-23 17:22:17 PDT
Comment on
attachment 68626
[details]
Patch r=me
Oliver Hunt
Comment 3
2010-09-23 17:53:21 PDT
Committed
r68223
: <
http://trac.webkit.org/changeset/68223
>
WebKit Review Bot
Comment 4
2010-09-23 18:33:54 PDT
http://trac.webkit.org/changeset/68223
might have broken SnowLeopard Intel Release (Tests)
Adam Barth
Comment 5
2010-09-23 22:22:34 PDT
(In reply to
comment #4
)
>
http://trac.webkit.org/changeset/68223
might have broken SnowLeopard Intel Release (Tests)
Bustage looks real...
Adam Barth
Comment 6
2010-09-23 22:23:04 PDT
http://build.webkit.org/results/Leopard%20Intel%20Release%20(Tests)/r68223%20(21670)/fast/js/kde/arguments-scope-pretty-diff.html
http://build.webkit.org/results/Leopard%20Intel%20Release%20(Tests)/r68223%20(21670)/fast/js/sputnik/Conformance/10_Execution_Contexts/10.1_Definitions/10.1.3_Variable_Instantiation/S10.1.3_A4_T1-pretty-diff.html
Csaba Osztrogonác
Comment 7
2010-09-23 23:24:08 PDT
And Qt:
http://build.webkit.org/results/Qt%20Linux%20Release/r68235%20(20738)/fast/js/kde/arguments-scope-pretty-diff.html
http://build.webkit.org/results/Qt%20Linux%20Release/r68235%20(20738)/fast/js/sputnik/Conformance/10_Execution_Contexts/10.1_Definitions/10.1.3_Variable_Instantiation/S10.1.3_A4_T1-pretty-diff.html
Csaba Osztrogonác
Comment 8
2010-09-23 23:27:14 PDT
Reopen, because it was rolled out by
http://trac.webkit.org/changeset/68237
Csaba Osztrogonác
Comment 9
2010-09-23 23:27:40 PDT
Comment on
attachment 68626
[details]
Patch Remove r+ from landed and rolled out patch.
Oliver Hunt
Comment 10
2010-09-24 12:06:56 PDT
Committed
r68281
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug